--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
-    "googleapis": "~1.0.14"
+    "googleapis": "~1.0.14",
+    "socket.io": "~1.2.1"
   }
 }
