--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~0.7.4",
     "jade": "~1.3.0",
     "googleapis": "~1.0.14",
-    "socket.io": "~1.2.1"
+    "socket.io": "~1.2.1",
+    "request": "~2.51.0"
   }
 }
